# raznaradki_realty_calendar

./: .dockerignore  .gitignore  Dockerfile  README.md  architecture.md  docker-compose.yml  env.example  init_services.py  pyproject.toml  raznaradki_main.py  run.sh  test_webhook.sh
app/: __init__.py  auth.py  config.py  crud.py  database.py  main.py  models.py  schemas.py
app/routers/: __init__.py  dashboard.py  expenses.py  payments.py  plans.py  realty.py  services.py  web.py  webhook.py
app/static/js/: bookings.js  expenses.js  payments.js  plans.js  realty.js  services.js
app/templates/: base.html  bookings.html  dashboard.html  expenses.html  login.html  payments.html  plans.html  realty.html  services_management.html
migrate/: add_indexes_migration.py  add_platform_tax_fields.py  create_expenses_table.py  migrate_client_id_nullable.py  migrate_old_data.py
