[project]
name = "raznaradki-realty-calendar"
version = "0.1.0"
description = "FastAPI service for managing realty bookings with webhook integration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.35",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.1",
    "pydantic-settings>=2.5.2",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.12",
    "openpyxl>=3.1.5",
    "loguru>=0.7.2",
]
